Feat: filter devices by listingId
